feat: Version support changed to 1.20.5 - 1.20.6